Comment section update
added comments section

--- a/user.html
+++ b/user.html
@@ -12,7 +12,13 @@
     <div class="All">
         <img src="Resources/Cookie.png">
         <h1>Great! You're login as user!</h1>
-        <button class="bt" id="bt">Go back to the login screen</button>
+        <button class="bt" id="bt1">Go back to the login screen</button>
+        
+    </div>
+    <div class="comment">
+        <h1 class="h2">leave a comment..</h1>
+        <textarea id="txtArea" placeholder="Some text.."> </textarea>
+        <button class="bt" id="bt2">Submit</button>
     </div>
     <script src="user.js"></script>
 </body>
